# Eyecloud-ECFG

./: README.md
DEMO_S16_96792/: DEMO.sln  Readme.md
DEMO_S16_96792/DEMO/: DEMO.cpp  DEMO.vcxproj  ecfg_demo
DEMO_S16_96792/DEMO/config/imx735_max96793_3000_5760_20_12bit_4L/: imx735_max96793_3000_5760_20_12bit_4L_A.json  imx735_max96793_3000_5760_20_12bit_4L_B.json  imx735_max96793_3000_5760_20_12bit_4L_init.json
DEMO_S16_96792/DEMO/config/imx735_max96793_3000_5760_20_12bit_4L_single_G2/: imx735_max96793_3000_5760_20_12bit_4L_single_G2_A.json  imx735_max96793_3000_5760_20_12bit_4L_single_G2_B.json  imx735_max96793_3000_5760_20_12bit_4L_single_G2_init.json
DEMO_S16_96792/inc/: ecfg_sdk.h
DEMO_S1_96792/: CMakeLists.txt  Readme.md  pthread.rar
DEMO_S1_96792/DEMO/: DEMO.cpp  DEMO.vcxproj.filters  ECFG.mvcmd
DEMO_S1_96792/DEMO/config/: linkmargin_test.json
DEMO_S1_96792/DEMO/config/max96793_3000_5760_20_12bit_4L/: des_max96793_3000_5760_20_12bit_4L_init.json  ser_sensor_max96793_3000_5760_20_12bit_4L_A.json
DEMO_S1_96792/DEMO/config/sc8238_3840_2160_30_10bit_4L/: des_sc8238_3840_2160_30_10bit_4L_init.json  ser_sensor_sc8238_3840_2160_30_10bit_4L_A.json
DEMO_S1_96792/DEMO/log/2024-06-18/14_30_08/: device0_log.txt  sdk_log_1.txt
DEMO_S1_96792/DEMO/log/2024-06-18/14_32_04/: device0_log.txt  sdk_log_1.txt
DEMO_S1_96792/DEMO/log/2024-06-18/14_56_08/: device0_log.txt  sdk_log_1.txt
DEMO_S1_96792/USB_Driver/: USB_Driver_Installer.bat
DEMO_S1_96792/USB_Driver/tools/: ECFG_install.mvcmd
DEMO_S1_96792/inc/: includes.h
DEMO_S1_96792/inc/windows/: pthread.h
(+14 files in other folders)
