CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(ecfg_demo) 

INCLUDE_DIRECTORIES(./inc)

FILE(GLOB SOURCES ./DEMO/DEMO.cpp ./DEMO/cJSON.c)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/DEMO)

FIND_PACKAGE(OpenCV REQUIRED)

FIND_PACKAGE(Threads REQUIRED)

FIND_PACKAGE(PkgConfig REQUIRED)

PKG_CHECK_MODULES(LIBUSB REQUIRED libusb-1.0)

INCLUDE_DIRECTORIES(${LIBUSB_INCLUDE_DIRS})

LINK_DIRECTORIES(${LIBUSB_LIBRARY_DIRS})

INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib)

ADD_EXECUTABLE(ecfg_demo ${SOURCES})

TARGET_LINK_LIBRARIES(ecfg_demo ${OpenCV_LIBS})

TARGET_LINK_LIBRARIES(ecfg_demo ${CMAKE_SOURCE_DIR}/lib/libecfg_sdk.a)

TARGET_LINK_LIBRARIES(ecfg_demo ${LIBUSB_LIBRARIES})

TARGET_LINK_LIBRARIES(ecfg_demo Threads::Threads)

LINK_LIBRARIES(pthread libusb)

SET(CXX ${CROSS_COMPILE}g++ -std=c++11)
